--- a/templates/logout_success.html
+++ b/templates/logout_success.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Login failed {% endblock %}
+{% block title %} You have been signed out {% endblock %}
 
 {% block content %}
 
