--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Login success {% endblock %}
+{% block title %} Sign In {% endblock %}
 
 {% block content %}
 
@@ -15,7 +15,7 @@
 
 body {
     font-family: 'Source Sans Pro', sans-serif;
-    color: black;
+    color: white;
     font-weight: 300;
 }
 
@@ -54,7 +54,7 @@ body :-ms-input-placeholder {
     top: 50%;
     left: 0;
     width: 100%;
-    height: 400px;
+    height: 800px;
     margin-top: -200px;
     overflow: hidden;
 }
@@ -128,13 +128,21 @@ form button:hover {
 
 </style>
 
+
 <div class="wrapper">
     <div class="container">
-        <div class="alert-message alert-message-success">
-            <h4>Login success</h4>
-            <p>Welcome back, <b>{{ user }}</b>.</p>
-        </div>
+        <h1>Register a new account</h1>
+
+        <form class="form" method="POST" action="{{ url_for('handle_register') }}">
+            <input type="email" placeholder="E-Mail" name="login-email" id="login-email" required>
+            <input type="text" placeholder="Username" name="login-username" id="login-username" required>
+            <input type="password" placeholder="Password" name="login-password" id="login-password" required>
+            <input type="password" placeholder="Confirm Password" name="login-password-confirm"
+                   id="login-password-confirm" required>
+            <button type="submit" id="login-button">Register</button>
+        </form>
     </div>
 </div>
+
 
 {% endblock %}
