register database call

--- a/templates/register_failed.html
+++ b/templates/register_failed.html
@@ -132,7 +132,7 @@ form button:hover {
     <div class="container">
         <div class="alert-message alert-message-danger">
             <h4>An error has occured</h4>
-            <p>{{ message }}</p>
+            <p>{{ message|safe }}</p>
         </div>
     </div>
 </div>
