--- a/templates/signin.html
+++ b/templates/signin.html
@@ -138,9 +138,9 @@ form button:hover {
             <input type="password" placeholder="Password" name="login-password" id="login-password" required>
             <button type="submit" id="login-button">Sign In</button>
         </form>
+        Not registered yet? Join us by clicking <a href="{{ url_for('register') }}">here</a>.
     </div>
 </div>
-
 
 
 {% endblock %}
